--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -15,7 +15,18 @@
         <title>Clock With Weather</title>
     </head>
     <body>
+        <div class="container">
+            <div class="row">
+                <p class="clock_today"></p>
+                <p class="clock_time"></p>
+            </div>
+            <div class="row">
+                weather
+            </div>
+        </div>
         <!-- Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <!-- Clock JS -->
+        <script src="{{url_for('static', filename='js/clock.js')}}"></script>
     </body>
 </html>
