--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="row">
+            <div class="row clock">
                 <p class="clock_today"></p>
                 <p class="clock_time"></p>
             </div>
