時計部分のデザイン修正

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -20,8 +20,15 @@
                 <p class="clock_today"></p>
                 <p class="clock_time"></p>
             </div>
-            <div class="row">
+            <div class="row weather">
                 weather
+            </div>
+            <div class="row">
+                <div class="github_link">
+                    <a href="https://github.com/mitty1293/clock-with-weather" target="_blank">
+                        <bi class="bi-github"> mitty1293/ clock-with-weather</bi>
+                    </a>
+                </div>
             </div>
         </div>
         <!-- Bootstrap Bundle with Popper -->
