--- a/flask/app/static/css/base.css
+++ b/flask/app/static/css/base.css
@@ -5,3 +5,21 @@ body {
     margin-top: 2%;
     font-family: "Raleway","Aria","Yu Gothic",sans-serif;
 }
+.clock {
+    text-align: center;
+}
+.weather {
+    text-align: center;
+}
+.github_link {
+    text-align: center;
+    margin-top: 1.5rem;
+}
+a {
+    color: #5c7a73;
+    text-decoration: none;
+}
+a:hover, a:focus {
+    color: #232e2b;
+    text-decoration: underline;
+}
