--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -21,7 +21,7 @@
                 <p class="clock_time"></p>
             </div>
             <div class="row weather">
-                weather
+                <p class="weather">weather</p>
             </div>
             <div class="row">
                 <div class="github_link">
