時間ごと天気の表示実装

--- a/flask/app/static/css/base.css
+++ b/flask/app/static/css/base.css
@@ -8,7 +8,7 @@ body {
 .clock {
     text-align: center;
 }
-.weather {
+.weather_hourly, .weather_daily {
     text-align: center;
 }
 .github_link {
