--- a/flask/app/static/css/base.css
+++ b/flask/app/static/css/base.css
@@ -11,6 +11,9 @@ body {
 .weather_hourly, .weather_daily {
     text-align: center;
 }
+.temp_min {
+    color: gray;
+}
 .github_link {
     text-align: center;
     margin-top: 1.5rem;
