--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -23,10 +23,10 @@
             <div class="row weather_hourly">
                 {% for data in hourly_data %}
                 <div class="col-sm">
-                    <p>{{data['dt']}}</p>
-                    <img src="{{data['icon']}}" width="50px" height="50px">
-                    <p>{{data['temp']}}&#8451;</p>
-                    <p>{{data['rain']}} mm</p>
+                    <div>{{data['dt']}}</div>
+                    <div><img src="{{data['icon']}}" width="50px" height="50px"></div>
+                    <div>{{data['temp']}}&#8451;</div>
+                    <div>{{data['rain']}} mm</div>
                     <!-- {{data['description']}} -->
                 </div>
                 {% endfor %}
@@ -34,10 +34,10 @@
             <div class="row weather_daily">
                 {% for data in daily_data %}
                 <div class="col-sm">
-                    <p>{{data['dt']}}</p>
-                    <img src="{{data['icon']}}" width="50px" height="50px">
-                    <p>{{data['temp_max']}}&#160;&#047;&#160;{{data['temp_min']}}&#8451;</p>
-                    <p>{{data['rain']}} mm</p>
+                    <div>{{data['dt']}}</div>
+                    <div><img src="{{data['icon']}}" width="50px" height="50px"></div>
+                    <div>{{data['temp_max']}}&#160;&#047;&#160;{{data['temp_min']}}&#8451;</div>
+                    <div>{{data['rain']}} mm</div>
                     <!-- {{data['description']}} -->
                 </div>
                 {% endfor %}
