--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -17,8 +17,8 @@
     <body>
         <div class="container">
             <div class="row clock">
-                <p class="clock_today"></p>
-                <p class="clock_time"></p>
+                <div class="clock_today"></div>
+                <div class="clock_time"></div>
             </div>
             <div class="row weather_hourly">
                 {% for data in hourly_data %}
