--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="row weather_hourly">
                 {% for data in hourly_data %}
-                <div class="col-sm">
+                <div class="col-sm weather_element">
                     <div>{{data['dt']}}</div>
                     <div><img src="{{data['icon']}}" width="50px" height="50px"></div>
                     <div>{{data['temp']}}&#8451;</div>
@@ -33,7 +33,7 @@
             </div>
             <div class="row weather_daily">
                 {% for data in daily_data %}
-                <div class="col-sm">
+                <div class="col-sm weather_element">
                     <div>{{data['dt']}}</div>
                     <div><img src="{{data['icon']}}" width="50px" height="50px"></div>
                     <div>{{data['temp_max']}}&#160;&#047;&#160;{{data['temp_min']}}&#8451;</div>
