フォント変更

--- a/flask/app/static/css/base.css
+++ b/flask/app/static/css/base.css
@@ -3,7 +3,7 @@
 }
 body { 
     margin-top: 2%;
-    font-family: "Raleway","Aria","Yu Gothic",sans-serif;
+    font-family: "Montserrat","Open Sans","Yu Gothic",sans-serif;
 }
 .clock {
     text-align: center;
