--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -26,7 +26,7 @@
                     <div>{{data['dt']}}</div>
                     <div><img src="{{data['icon']}}" width="50px" height="50px"></div>
                     <div>{{data['temp']}}&#8451;</div>
-                    <div>{{data['rain']}} mm</div>
+                    <div>{% if data['rain']!=0 %}{{data['rain']}} mm{% endif %}</div>
                     <!-- {{data['description']}} -->
                 </div>
                 {% endfor %}
@@ -37,7 +37,7 @@
                     <div>{{data['dt']}}</div>
                     <div><img src="{{data['icon']}}" width="50px" height="50px"></div>
                     <div>{{data['temp_max']}}&#160;&#047;&#160;{{data['temp_min']}}&#8451;</div>
-                    <div>{{data['rain']}} mm</div>
+                    <div>{% if data['rain']!=0 %}{{data['rain']}} mm{% endif %}</div>
                     <!-- {{data['description']}} -->
                 </div>
                 {% endfor %}
